# rename-files

./: Cargo.toml  README.md
src/: main.rs  single_rename.rs
