[package]
name = "rename_files"
version = "0.1.0"
authors = ["Edgar Torres edgar.torres@rub.de"]
license_= "MIT"
description = "a tool to rename all files in folder => pattern_id.ext"
readme = "README.md"
homepage = "https://github.com/yoelt11"
repository = "https://github.com/yoelt11/rename-files"
keywords = ["cli","file","rename"]
categories_= ["commad-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
indicatif = "0.17.0"
rayon = "1.5.3"

